--- a/zuul-server.yml
+++ b/zuul-server.yml
@@ -6,7 +6,7 @@ spring:
 eureka:
   client:
     service-url:
-      default-zone: http://localhost:8761/eureka
+      default-zone: http://localhost:8761/eureka/
 zuul:
   ignored-services: '*'
   routes:
