edit_zuul-service_for_customer

--- a/zuul-server.yml
+++ b/zuul-server.yml
@@ -18,6 +18,11 @@ zuul:
       sensitive-headers: 'Cookie,Set-Cookie '
       service-id: auth-service
       strip-prefix: false
+    customer-service:
+      path: /auth1/**
+      sensitive-headers: 'Cookie,Set-Cookie '
+      service-id: customer-service
+      strip-prefix: false
 management:
   endpoints:
     web:
